Add name ref and label in the print

--- a/open_compare.ipynb
+++ b/open_compare.ipynb
@@ -141,94 +141,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 126,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Ref:sub-unfSCT004\n",
       "[[-6.0117296e-03 -2.5833905e-02  7.9956019e-01 -1.3209519e+01]\n",
       " [-7.7918077e-01  1.8132104e-01  0.0000000e+00  8.9816589e+01]\n",
       " [ 1.8122135e-01  7.7875239e-01  2.6524169e-02 -2.7307306e+02]]\n",
+      "Label:01_t2-label.nrrd\n",
       "[[ 8.00000012e-01  3.63901229e-08  4.17830259e-09]\n",
       " [ 3.63901236e-08 -7.79180780e-01 -1.81321073e-01]\n",
       " [ 4.17830267e-09 -1.81321073e-01  7.79180780e-01]]\n",
       "######\n",
+      "Ref:sub-unfSCT005\n",
       "[[-6.0117296e-03 -2.5833905e-02  7.9956019e-01 -1.3209519e+01]\n",
       " [-7.7918077e-01  1.8132104e-01  0.0000000e+00  8.1141891e+01]\n",
       " [ 1.8122135e-01  7.7875239e-01  2.6524169e-02 -1.8343454e+02]]\n",
+      "Label:02_t2-label.nrrd\n",
       "[[ 7.99560218e-01 -1.10685630e-07 -2.65231477e-02]\n",
       " [-6.01161379e-03 -7.79180784e-01 -1.81221370e-01]\n",
       " [ 2.58328818e-02 -1.81321052e-01  7.78752436e-01]]\n",
       "######\n",
+      "Ref:sub-unfSCT006\n",
       "[[ 0.0000000e+00  0.0000000e+00  8.0000001e-01 -2.2294432e+01]\n",
       " [-7.9842138e-01  5.0232418e-02  0.0000000e+00  1.3428831e+02]\n",
       " [ 5.0232418e-02  7.9842138e-01  0.0000000e+00 -2.7055518e+02]]\n",
+      "Label:03_t2-label.nrrd\n",
       "[[ 7.99560218e-01 -1.10685630e-07 -2.65231477e-02]\n",
       " [-6.01161379e-03 -7.79180784e-01 -1.81221370e-01]\n",
       " [ 2.58328818e-02 -1.81321052e-01  7.78752436e-01]]\n",
       "######\n",
+      "Ref:sub-unfSCT007\n",
       "[[ 8.0000114e-01  0.0000000e+00  0.0000000e+00 -2.1330645e+01]\n",
       " [ 0.0000000e+00  7.9842138e-01  5.0232418e-02 -1.2619125e+02]\n",
       " [ 0.0000000e+00 -5.0232418e-02  7.9842138e-01 -1.7260335e+02]]\n",
+      "Label:04_t2-label.nrrd\n",
       "[[ 8.00000012e-01  4.24646629e-08  1.33450684e-09]\n",
       " [ 4.24646634e-08 -7.98421392e-01 -5.02324557e-02]\n",
       " [ 1.33450685e-09 -5.02324557e-02  7.98421392e-01]]\n",
       "######\n",
+      "Ref:sub-unfSCT008\n",
       "[[ 7.98751712e-01 -2.18399992e-13  4.46571633e-02 -2.93695755e+01]\n",
       " [-2.69402270e-16  8.00000012e-01  3.91760019e-12 -1.14669876e+02]\n",
       " [-4.46571112e-02 -3.91119992e-12  7.98752606e-01 -1.46799774e+02]]\n",
+      "Label:05_t2-label.nrrd\n",
       "[[ 8.00000012e-01  4.24646629e-08  1.33450684e-09]\n",
       " [ 4.24646634e-08 -7.98421392e-01 -5.02324557e-02]\n",
       " [ 1.33450685e-09 -5.02324557e-02  7.98421392e-01]]\n",
       "######\n",
       "Error on file No such file or no access: '../sct-testing-large/sub-unfSCT009/anat/sub-unfSCT009_T2w.nii.gz'\n",
       "######\n",
+      "Ref:sub-unfSCT011\n",
       "[[ 7.9917693e-01 -1.7760000e-13  3.6290422e-02 -3.3835831e+01]\n",
       " [-1.1557602e-16  8.0000001e-01  3.9176002e-12 -1.1659758e+02]\n",
       " [-3.6290444e-02 -3.9135999e-12  7.9917645e-01 -1.7797409e+02]]\n",
+      "Label:07_t2-label.nrrd\n",
       "[[ 7.99355584e-01  2.10272142e-08 -3.21040496e-02]\n",
       " [ 2.01996624e-08 -8.00000012e-01 -2.10272120e-08]\n",
       " [ 3.21040496e-02 -2.01996610e-08  7.99355584e-01]]\n",
       "######\n",
+      "Ref:sub-unfSCT012\n",
       "[[ 7.99901962e-01 -6.15999968e-14  1.25658466e-02 -3.00864658e+01]\n",
       " [ 7.00124148e-17  8.00000012e-01  3.91760019e-12 -1.11778305e+02]\n",
       " [-1.25658568e-02 -3.91680004e-12  7.99901307e-01 -1.38354736e+02]]\n",
+      "Label:08_t2-label.nrrd\n",
       "[[ 0.80000001  0.          0.        ]\n",
       " [ 0.         -0.80000001  0.        ]\n",
       " [ 0.          0.          0.80000001]]\n",
       "######\n",
+      "Ref:sub-unfSCT013\n",
       "[[ 8.0000114e-01  0.0000000e+00  0.0000000e+00 -1.9416937e+01]\n",
       " [ 0.0000000e+00  8.0000001e-01  3.9176002e-12 -1.0310361e+02]\n",
       " [ 0.0000000e+00 -3.9176002e-12  8.0000001e-01 -1.4551324e+02]]\n",
+      "Label:09_t2-label.nrrd\n",
       "[[ 7.99176525e-01  1.78922373e-08  3.62891373e-02]\n",
       " [ 1.87231262e-08 -8.00000012e-01 -1.78922370e-08]\n",
       " [-3.62891373e-02 -1.87231264e-08  7.99176525e-01]]\n",
       "######\n",
+      "Ref:sub-unfSCT014\n",
       "[[ 7.99726307e-01  1.02400002e-13 -2.09415480e-02 -1.94520493e+01]\n",
       " [ 1.43971289e-16  8.00000012e-01  3.91760019e-12 -1.15151794e+02]\n",
       " [ 2.09415592e-02 -3.91600034e-12  7.99725890e-01 -1.22996811e+02]]\n",
+      "Label:10_t2-label.nrrd\n",
       "[[ 7.99176525e-01  1.78922373e-08  3.62891373e-02]\n",
       " [ 1.87231262e-08 -8.00000012e-01 -1.78922370e-08]\n",
       " [-3.62891373e-02 -1.87231264e-08  7.99176525e-01]]\n",
       "######\n",
+      "Ref:sub-unfSCT015\n",
       "[[ 0.0000000e+00  6.9812052e-03  7.9996955e-01 -2.9923510e+01]\n",
       " [-8.0000001e-01  0.0000000e+00  0.0000000e+00  1.4848193e+02]\n",
       " [ 0.0000000e+00  7.9996955e-01 -6.9812052e-03 -1.0528851e+02]]\n",
+      "Label:11_t2-label.nrrd\n",
       "[[ 0.80000001  0.          0.        ]\n",
       " [ 0.         -0.80000001  0.        ]\n",
       " [ 0.          0.          0.80000001]]\n",
       "######\n",
+      "Ref:sub-unfSCT016\n",
       "[[ 0.0000000e+00 -1.1169789e-02  7.9992205e-01 -2.6619478e+01]\n",
       " [-8.0000001e-01  0.0000000e+00  0.0000000e+00  1.3011185e+02]\n",
       " [ 0.0000000e+00  7.9992205e-01  1.1169789e-02 -1.1752914e+02]]\n",
+      "Label:12_t2-label.nrrd\n",
       "[[ 7.99922002e-01  1.36249831e-08  1.11718077e-02]\n",
       " [ 1.38166003e-08 -8.00000012e-01 -1.36249829e-08]\n",
       " [-1.11718077e-02 -1.38166005e-08  7.99922002e-01]]\n",
       "######\n",
+      "Ref:sub-unfSCT017\n",
       "[[   0.          0.          1.        -32.219284]\n",
       " [  -1.          0.          0.        211.7866  ]\n",
       " [   0.          1.         -0.       -139.32167 ]]\n",
+      "Label:13_t2-label.nrrd\n",
       "[[ 0.80000001  0.          0.        ]\n",
       " [ 0.         -0.80000001  0.        ]\n",
       " [ 0.          0.          0.80000001]]\n",
@@ -252,7 +276,9 @@
     "    try:\n",
     "        nii_header, nii_matrix = get_header(get_sct_path(f\"sub-unfSCT{reference}\"), True)\n",
     "        nrrd_header, nrrd_matrix = get_header(f\"{PATH_label}center1_Cadotte/{label}_t2-label.nrrd\", True)\n",
+    "        print(f\"Ref:sub-unfSCT{reference}\")\n",
     "        print(nii_matrix)\n",
+    "        print(f\"Label:{label}_t2-label.nrrd\")\n",
     "        print(nrrd_matrix)\n",
     "    except FileNotFoundError as f:\n",
     "        print(f\"Error on file {f}\")\n",
@@ -261,9 +287,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T21:09:56.434601Z",
-     "start_time": "2023-05-17T21:09:56.034481Z"
+     "end_time": "2023-05-17T21:21:11.250166Z",
+     "start_time": "2023-05-17T21:21:10.848477Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
