new version of compare cleaned

--- a/open_compare.ipynb
+++ b/open_compare.ipynb
@@ -152,10 +152,7 @@
     "        header = nib.load(file).header\n",
     "        #TODO verify if this is the good way to get qform ?\n",
     "        !fslhd $file | grep 'qto*'\n",
-    "        x = header[\"srow_x\"]\n",
-    "        y = header[\"srow_y\"]\n",
-    "        z = header[\"srow_z\"]\n",
-    "        matrix = np.vstack((x, y, z))\n",
+    "        matrix = _\n",
     "    else:\n",
     "        raise Exception(f\"File extention of {file} not supported\")\n",
     "    return header, matrix\n"
@@ -382,10 +379,8 @@
     "    try:\n",
     "        print(f\"Ref:sub-unfSCT{reference}\")\n",
     "        nii_header, nii_matrix = get_header(get_sct_path(f\"sub-unfSCT{reference}\"))\n",
-    "        #print(nii_matrix)\n",
     "        print(f\"Label:{label}_t2-label.nii.gz\")\n",
     "        nrrd2nii_header, nrrd2nii_matrix = get_header(f\"{PATH_label}center1_Cadotte/{label}_t2-label.nii.gz\")\n",
-    "        #print(nrrd2nii_matrix)\n",
     "        print(f\"Label:{label}_t2-label.nrrd\")\n",
     "        nrrd_header, nrrd_matrix = get_header(f\"{PATH_label}center1_Cadotte/{label}_t2-label.nrrd\")\n",
     "        print(nrrd_matrix)\n",
