--- a/open_compare.ipynb
+++ b/open_compare.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Get the image and the corresponding label. Compare them qform"
+    "# Get the image and the corresponding label and compare them qform"
    ],
    "metadata": {
     "collapsed": false
