--- a/nnUnet_DS.ipynb
+++ b/nnUnet_DS.ipynb
@@ -1,26 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Create nnUNetV2 dataset from ds004507 dataset"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-05-29T15:12:17.736272Z",
-     "start_time": "2023-05-29T15:12:17.733881Z"
-    }
-   },
    "outputs": [],
    "source": [
     "import os\n",
     "import shutil\n",
     "import pandas as pd\n",
-    "\n",
     "PATH = \"/Users/theomathieu/Documents/Stage/Code/ds004507\"\n",
     "img = \"/Users/theomathieu/Documents/Stage/Code/Dataset002_rootseg/imagesTr\"\n",
     "img_label = \"/Users/theomathieu/Documents/Stage/Code/Dataset002_rootseg/labelsTr\"\n",
     "test=\"/Users/theomathieu/Documents/Stage/Code/Dataset002_rootseg/imagesTs\""
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T15:12:17.736272Z",
+     "start_time": "2023-05-29T15:12:17.733881Z"
+    }
+   }
   },
   {
    "cell_type": "code",
