--- a/utilities/cadotte_value.ipynb
+++ b/utilities/cadotte_value.ipynb
@@ -224,17 +224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 256,
    "outputs": [],
    "source": [
-    "df_root_pd.to_csv(\"/Users/theomathieu/Documents/Stage/results_img/cadotte/root.csv\")\n",
-    "df_ver_pd.to_csv(\"/Users/theomathieu/Documents/Stage/results_img/cadotte/vertebrae.csv\")"
+    "df_root_pd.to_csv(\"/Users/theomathieu/Documents/Stage/results_img/cadotte/root.csv\", index=False)\n",
+    "df_ver_pd.to_csv(\"/Users/theomathieu/Documents/Stage/results_img/cadotte/vertebrae.csv\", index= False)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-15T00:26:59.839144Z",
-     "start_time": "2023-08-15T00:26:59.826022Z"
+     "end_time": "2023-08-15T00:33:39.729821Z",
+     "start_time": "2023-08-15T00:33:39.723705Z"
     }
    }
   },
